--- a/style.css
+++ b/style.css
@@ -9,3 +9,13 @@
   font-size: 15px;
   color: blue;
 }
+.play_button
+{
+  width: 130px;
+  font-size: 25px;
+}
+canvas
+{
+  border:5px solid white;
+  border-radius:20px;
+}
