--- a/style.css
+++ b/style.css
@@ -9,6 +9,38 @@
   font-size: 15px;
   color: blue;
 }
+body
+{
+  background-size: cover;
+}
+.div_speed
+{
+  float: left;
+}
+.div_speed_img
+{
+  width: 200px;
+  border-raidus: 100px;
+}
+#speed
+{
+  font-size: 23px;
+  margin: 15px;
+}
+.div_volume
+{
+  float: right;
+}
+.div_volume_img
+{
+  width: 200px;
+  border-raidus: 100px;
+}
+#volume
+{
+  font-size: 23px;
+  margin: 15px;
+}
 .play_button
 {
   width: 130px;
